--- a/FFT_VGA_combined/Quartus/vga_system/vga_system.cmp
+++ b/FFT_VGA_combined/Quartus/vga_system/vga_system.cmp
@@ -1,25 +1,27 @@
 	component vga_system is
 		port (
-			clk_clk             : in    std_logic                     := 'X';             -- clk
-			lights_readdata     : out   std_logic_vector(8 downto 0);                     -- readdata
-			pll_0_locked_export : out   std_logic;                                        -- export
-			pll_0_outclk1_clk   : out   std_logic;                                        -- clk
-			reset_reset_n       : in    std_logic                     := 'X';             -- reset_n
-			sdram_addr          : out   std_logic_vector(12 downto 0);                    -- addr
-			sdram_ba            : out   std_logic_vector(1 downto 0);                     -- ba
-			sdram_cas_n         : out   std_logic;                                        -- cas_n
-			sdram_cke           : out   std_logic;                                        -- cke
-			sdram_cs_n          : out   std_logic;                                        -- cs_n
-			sdram_dq            : inout std_logic_vector(15 downto 0) := (others => 'X'); -- dq
-			sdram_dqm           : out   std_logic_vector(1 downto 0);                     -- dqm
-			sdram_ras_n         : out   std_logic;                                        -- ras_n
-			sdram_we_n          : out   std_logic;                                        -- we_n
-			vga_vga_blu         : out   std_logic_vector(7 downto 0);                     -- vga_blu
-			vga_vga_clk         : out   std_logic;                                        -- vga_clk
-			vga_vga_grn         : out   std_logic_vector(7 downto 0);                     -- vga_grn
-			vga_vga_hsync       : out   std_logic;                                        -- vga_hsync
-			vga_vga_red         : out   std_logic_vector(7 downto 0);                     -- vga_red
-			vga_vga_vsync       : out   std_logic                                         -- vga_vsync
+			clk_clk                        : in    std_logic                     := 'X';             -- clk
+			lights_readdata                : out   std_logic_vector(8 downto 0);                     -- readdata
+			pll_0_locked_export            : out   std_logic;                                        -- export
+			pll_0_outclk1_clk              : out   std_logic;                                        -- clk
+			reset_reset_n                  : in    std_logic                     := 'X';             -- reset_n
+			rs232_0_external_interface_RXD : in    std_logic                     := 'X';             -- RXD
+			rs232_0_external_interface_TXD : out   std_logic;                                        -- TXD
+			sdram_addr                     : out   std_logic_vector(12 downto 0);                    -- addr
+			sdram_ba                       : out   std_logic_vector(1 downto 0);                     -- ba
+			sdram_cas_n                    : out   std_logic;                                        -- cas_n
+			sdram_cke                      : out   std_logic;                                        -- cke
+			sdram_cs_n                     : out   std_logic;                                        -- cs_n
+			sdram_dq                       : inout std_logic_vector(15 downto 0) := (others => 'X'); -- dq
+			sdram_dqm                      : out   std_logic_vector(1 downto 0);                     -- dqm
+			sdram_ras_n                    : out   std_logic;                                        -- ras_n
+			sdram_we_n                     : out   std_logic;                                        -- we_n
+			vga_vga_blu                    : out   std_logic_vector(7 downto 0);                     -- vga_blu
+			vga_vga_clk                    : out   std_logic;                                        -- vga_clk
+			vga_vga_grn                    : out   std_logic_vector(7 downto 0);                     -- vga_grn
+			vga_vga_hsync                  : out   std_logic;                                        -- vga_hsync
+			vga_vga_red                    : out   std_logic_vector(7 downto 0);                     -- vga_red
+			vga_vga_vsync                  : out   std_logic                                         -- vga_vsync
 		);
 	end component vga_system;
 
