More CSS changes

--- a/cloud/client/src/App.css
+++ b/cloud/client/src/App.css
@@ -1,15 +1,17 @@
 .App{
   background-color: #282c34;
   color: white;
+  min-height: 100vh;
+
 }
 
 .App-content   {
   text-align: center;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 5em;
+  display: flex;
+  flex-direction: column;
 }
 
 input:focus{
