--- a/cloud/client/src/components/songSelectForm.css
+++ b/cloud/client/src/components/songSelectForm.css
@@ -1,3 +1,16 @@
+.songContent{
+    overflow:scroll;
+    height: 55vh;
+    overflow-x: hidden; 
+    direction: rtl;
+}
+
+/* Based On https://blog.logrocket.com/hide-scrollbar-without-impacting-scrolling-css/*/
+.songContent::-webkit-scrollbar{
+    display: none;
+    width: 0 !important;
+} 
+
 .songContent p{
     white-space: pre-line;
 }
@@ -7,29 +20,7 @@
     display: inline-block;
     padding: 0.5em 1em;
     text-decoration: none;
-    border-radius: 4px;
-    color: #FFFFFF;
-    
-}
-
-#playButton.playInactive{
-    background-color: #5C5C5C;
-    cursor: not-allowed;
-}
-
-.playActive{
-  background-color: #4CAF50;
-  /* color: #FFFFFF; */
-  cursor: pointer;
-}
-.playActive:hover{
-  background-color: #388E3C ;
-  /* color: #FFFFFF; */
-  
-}
-.playActive:active{
-  background-color: #1B5E20;
-  /* color: #FFFFFF; */
+    border-radius: 4px;    
 }
 
 .DDContainer{
