--- a/cloud/client/src/components/uploadForm.css
+++ b/cloud/client/src/components/uploadForm.css
@@ -18,3 +18,37 @@
   color: red;
   font-size: 20px;
 }
+
+#filenameInput{
+  padding-top: 20px;
+}
+
+#filenameInput input{
+  background-color: #4e5665;
+  color: white;
+  border-radius:  35px;
+  border: none;
+  padding: 10px;
+  width: 100%;
+}
+
+#nameExists{
+
+}
+
+#submitButton{
+  padding-top: 20px;
+}
+
+#submitButton input:disable{
+  cursor: not-allowed;
+}
+
+#submitButton input{
+  border-radius:  35px;
+  border: none;
+  padding: 15px;
+  font: bold 16px arial;
+  text-align: center;
+}
+
